# Humanity

./: .gitignore  CMakeLists.txt  install.sh  main.cpp
data/sound/: origin.txt
src/: Game.cpp  Game.h  GameDefs.cpp  GameDefs.h
src/Scene/: Part.cpp  Part.h  PartExitStatus.h  Scene.h  SceneExitStatus.h  SceneType.h
src/Scene/BattleScene/: BattleScene.cpp  BattleScene.h  BattleSceneDefs.cpp  BattleSceneDefs.h  BeginningPart.cpp  BeginningPart.h  Components.cpp  Components.h  EnemyAppearancePart.cpp  EnemyAppearancePart.h  EnemyEmergingPart.cpp  EnemyEmergingPart.h
src/Scene/BattleScene/Character/: AttackType.h  Character.cpp  Character.h  Status.h
src/Scene/BattleScene/Character/Enemy/: Enemy.h  EnemyStatus.cpp  EnemyStatus.h
src/Scene/BattleScene/Character/Enemy/TestEnemy/: TestEnemy.cpp  TestEnemy.h  TestEnemyAppearing.cpp  TestEnemyAppearing.h  TestEnemyNeutral.cpp  TestEnemyNeutral.h
src/Scene/BattleScene/Character/Enemy/TestEnemy/Status/: Appearing.cpp  Appearing.h  Neutral.cpp  Neutral.h
src/Scene/TitleScene/: TitleMessage.cpp  TitleMessage.h  TitleScene.cpp  TitleScene.h
src/tools/: SDL_helper.cpp  SDL_helper.h  Timer.cpp  Timer.h
